# pier-client-polkadot

./: .gitignore  Cargo.toml  README.md  build.rs
pb/: plugin.proto
src/proto/: basic.rs  ibtp.rs  mod.rs  plugin.rs  plugin_grpc.rs
